pycalc/dcl/generated/DCLParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DCLParser ( Parser ):

    grammarFileName = "DCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "':'", "'[:'", "']'", "';'", "'.'", 
                     "'('", "')'", "','", "':='", "'*'", "'+'", "'-'", "'~'", 
                     "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", 
                     "'<'", "'<='", "'>'", "'>='", "'='", "'=='", "'!='", 
                     "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", 
                      "COMMA", "ASSIGN", "STAR", "PLUS", "MINUS", "TILDE", 
                      "PIPE2", "DIV", "MOD", "LT2", "GT2", "AMP", "PIPE", 
                      "LT", "LT_EQ", "GT", "GT_EQ", "EQ1", "EQ2", "NOT_EQ1", 
                      "NOT_EQ2", "K_ALL", "K_AND", "K_AS", "K_ASC", "K_BETWEEN", 
                      "K_BY", "K_CASE", "K_CAST", "K_CROSS", "K_DESC", "K_DISTINCT", 
                      "K_DROP", "K_ELSE", "K_END", "K_ESCAPE", "K_EXCEPT", 
                      "K_EXTRACT", "K_FROM", "K_GLOB", "K_GROUP", "K_HAVING", 
                      "K_IN", "K_INNER", "K_INTERSECT", "K_IS", "K_ISNULL", 
                      "K_JOIN", "K_LEFT", "K_LIKE", "K_LIMIT", "K_MATCH", 
                      "K_NATURAL", "K_NOT", "K_NOTNULL", "K_NULL", "K_OFFSET", 
                      "K_ON", "K_OR", "K_ORDER", "K_OUTER", "K_RECURSIVE", 
                      "K_REGEXP", "K_ROW", "K_SELECT", "K_THEN", "K_UNION", 
                      "K_UNIQUE", "K_USING", "K_VALUE", "K_VALUES", "K_WHEN", 
                      "K_WHERE", "K_WITH", "K_YEAR", "K_MONTH", "K_DAY", 
                      "K_HOUR", "K_MINUTE", "K_SECOND", "LET_IDENT", "IDENT", 
                      "NUMERIC_LITERAL", "STRING_LITERAL", "SINGLE_LINE_COMMENT", 
                      "MULTILINE_COMMENT", "SPACES", "ERROR" ]

    RULE_queryRule = 0
    RULE_exprRule = 1
    RULE_booleanExprRule = 2
    RULE_baseExprRule = 3
    RULE_compositeSqlQueryRule = 4
    RULE_commonTableExpressionRule = 5
    RULE_sqlQueryRule = 6
    RULE_tableExpressionRule = 7
    RULE_selectClauseRule = 8
    RULE_fromClauseRule = 9
    RULE_graphPathRule = 10
    RULE_graphNodeRule = 11
    RULE_graphRelationRule = 12
    RULE_whereClauseRule = 13
    RULE_groupByClauseRule = 14
    RULE_joinClauseRule = 15
    RULE_tableRule = 16
    RULE_tableAliasRule = 17
    RULE_joinOperatorRule = 18
    RULE_joinConstraintRule = 19
    RULE_resultColumnRule = 20
    RULE_compoundOperatorRule = 21
    RULE_orderByClauseRule = 22
    RULE_orderingTermRule = 23
    RULE_limitClauseRule = 24
    RULE_typeNameRule = 25
    RULE_signedNumberRule = 26
    RULE_keywordRule = 27

    ruleNames =  [ "queryRule", "exprRule", "booleanExprRule", "baseExprRule", 
                   "compositeSqlQueryRule", "commonTableExpressionRule", 
                   "sqlQueryRule", "tableExpressionRule", "selectClauseRule", 
                   "fromClauseRule", "graphPathRule", "graphNodeRule", "graphRelationRule", 
                   "whereClauseRule", "groupByClauseRule", "joinClauseRule", 
                   "tableRule", "tableAliasRule", "joinOperatorRule", "joinConstraintRule", 
                   "resultColumnRule", "compoundOperatorRule", "orderByClauseRule", 
                   "orderingTermRule", "limitClauseRule", "typeNameRule", 
                   "signedNumberRule", "keywordRule" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    SCOL=5
    DOT=6
    OPEN_PAR=7
    CLOSE_PAR=8
    COMMA=9
    ASSIGN=10
    STAR=11
    PLUS=12
    MINUS=13
    TILDE=14
    PIPE2=15
    DIV=16
    MOD=17
    LT2=18
    GT2=19
    AMP=20
    PIPE=21
    LT=22
    LT_EQ=23
    GT=24
    GT_EQ=25
    EQ1=26
    EQ2=27
    NOT_EQ1=28
    NOT_EQ2=29
    K_ALL=30
    K_AND=31
    K_AS=32
    K_ASC=33
    K_BETWEEN=34
    K_BY=35
    K_CASE=36
    K_CAST=37
    K_CROSS=38
    K_DESC=39
    K_DISTINCT=40
    K_DROP=41
    K_ELSE=42
    K_END=43
    K_ESCAPE=44
    K_EXCEPT=45
    K_EXTRACT=46
    K_FROM=47
    K_GLOB=48
    K_GROUP=49
    K_HAVING=50
    K_IN=51
    K_INNER=52
    K_INTERSECT=53
    K_IS=54
    K_ISNULL=55
    K_JOIN=56
    K_LEFT=57
    K_LIKE=58
    K_LIMIT=59
    K_MATCH=60
    K_NATURAL=61
    K_NOT=62
    K_NOTNULL=63
    K_NULL=64
    K_OFFSET=65
    K_ON=66
    K_OR=67
    K_ORDER=68
    K_OUTER=69
    K_RECURSIVE=70
    K_REGEXP=71
    K_ROW=72
    K_SELECT=73
    K_THEN=74
    K_UNION=75
    K_UNIQUE=76
    K_USING=77
    K_VALUE=78
    K_VALUES=79
    K_WHEN=80
    K_WHERE=81
    K_WITH=82
    K_YEAR=83
    K_MONTH=84
    K_DAY=85
    K_HOUR=86
    K_MINUTE=87
    K_SECOND=88
    LET_IDENT=89
    IDENT=90
    NUMERIC_LITERAL=91
    STRING_LITERAL=92
    SINGLE_LINE_COMMENT=93
    MULTILINE_COMMENT=94
    SPACES=95
    ERROR=96

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprRule(self):
            return self.getTypedRuleContext(DCLParser.ExprRuleContext,0)


        def EOF(self):
            return self.getToken(DCLParser.EOF, 0)

        def getRuleIndex(self):
            return DCLParser.RULE_queryRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryRule" ):
                listener.enterQueryRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryRule" ):
                listener.exitQueryRule(self)




    def queryRule(self):

        localctx = DCLParser.QueryRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_queryRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.exprRule()
            self.state = 57
            self.match(DCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_exprRule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BooleanExpressionContext(ExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.ExprRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExprRule(self):
            return self.getTypedRuleContext(DCLParser.BooleanExprRuleContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpression" ):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpression" ):
                listener.exitBooleanExpression(self)


    class SqlExpressionContext(ExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.ExprRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compositeSqlQueryRule(self):
            return self.getTypedRuleContext(DCLParser.CompositeSqlQueryRuleContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlExpression" ):
                listener.enterSqlExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlExpression" ):
                listener.exitSqlExpression(self)



    def exprRule(self):

        localctx = DCLParser.ExprRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exprRule)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DCLParser.K_SELECT, DCLParser.K_WITH]:
                localctx = DCLParser.SqlExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.compositeSqlQueryRule()
                pass
            elif token in [DCLParser.OPEN_PAR, DCLParser.MINUS, DCLParser.K_NOT, DCLParser.K_NULL, DCLParser.IDENT, DCLParser.NUMERIC_LITERAL, DCLParser.STRING_LITERAL]:
                localctx = DCLParser.BooleanExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.booleanExprRule(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExprRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_booleanExprRule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NullCheckExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.isNull = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self):
            return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,0)

        def K_NULL(self):
            return self.getToken(DCLParser.K_NULL, 0)
        def K_NOTNULL(self):
            return self.getToken(DCLParser.K_NOTNULL, 0)
        def K_NOT(self):
            return self.getToken(DCLParser.K_NOT, 0)
        def K_ISNULL(self):
            return self.getToken(DCLParser.K_ISNULL, 0)
        def K_IS(self):
            return self.getToken(DCLParser.K_IS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullCheckExpression" ):
                listener.enterNullCheckExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullCheckExpression" ):
                listener.exitNullCheckExpression(self)


    class BaseExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def baseExprRule(self):
            return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseExpression" ):
                listener.enterBaseExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseExpression" ):
                listener.exitBaseExpression(self)


    class IsExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.negate = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BaseExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,i)

        def K_IS(self):
            return self.getToken(DCLParser.K_IS, 0)
        def K_NOT(self):
            return self.getToken(DCLParser.K_NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsExpression" ):
                listener.enterIsExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsExpression" ):
                listener.exitIsExpression(self)


    class AndExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BooleanExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BooleanExprRuleContext,i)

        def K_AND(self):
            return self.getToken(DCLParser.K_AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpression" ):
                listener.enterAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpression" ):
                listener.exitAndExpression(self)


    class BetweenExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.negate = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BaseExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,i)

        def K_BETWEEN(self):
            return self.getToken(DCLParser.K_BETWEEN, 0)
        def K_AND(self):
            return self.getToken(DCLParser.K_AND, 0)
        def K_NOT(self):
            return self.getToken(DCLParser.K_NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBetweenExpression" ):
                listener.enterBetweenExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBetweenExpression" ):
                listener.exitBetweenExpression(self)


    class StringCompExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.negate = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BaseExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,i)

        def K_LIKE(self):
            return self.getToken(DCLParser.K_LIKE, 0)
        def K_NOT(self):
            return self.getToken(DCLParser.K_NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringCompExpression" ):
                listener.enterStringCompExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringCompExpression" ):
                listener.exitStringCompExpression(self)


    class HighCompExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BaseExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,i)

        def LT(self):
            return self.getToken(DCLParser.LT, 0)
        def LT_EQ(self):
            return self.getToken(DCLParser.LT_EQ, 0)
        def GT(self):
            return self.getToken(DCLParser.GT, 0)
        def GT_EQ(self):
            return self.getToken(DCLParser.GT_EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHighCompExpression" ):
                listener.enterHighCompExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHighCompExpression" ):
                listener.exitHighCompExpression(self)


    class NotExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.value = None # BaseExprRuleContext
            self.copyFrom(ctx)

        def K_NOT(self):
            return self.getToken(DCLParser.K_NOT, 0)
        def baseExprRule(self):
            return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpression" ):
                listener.enterNotExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpression" ):
                listener.exitNotExpression(self)


    class OrExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BooleanExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BooleanExprRuleContext,i)

        def K_OR(self):
            return self.getToken(DCLParser.K_OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpression" ):
                listener.enterOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpression" ):
                listener.exitOrExpression(self)


    class LowCompExpressionContext(BooleanExprRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.BooleanExprRuleContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def baseExprRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.BaseExprRuleContext)
            else:
                return self.getTypedRuleContext(DCLParser.BaseExprRuleContext,i)

        def EQ1(self):
            return self.getToken(DCLParser.EQ1, 0)
        def EQ2(self):
            return self.getToken(DCLParser.EQ2, 0)
        def NOT_EQ1(self):
            return self.getToken(DCLParser.NOT_EQ1, 0)
        def NOT_EQ2(self):
            return self.getToken(DCLParser.NOT_EQ2, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLowCompExpression" ):
                listener.enterLowCompExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLowCompExpression" ):
                listener.exitLowCompExpression(self)



    def booleanExprRule(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DCLParser.BooleanExprRuleContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_booleanExprRule, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = DCLParser.HighCompExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 64
                self.baseExprRule(0)
                self.state = 65
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DCLParser.LT) | (1 << DCLParser.LT_EQ) | (1 << DCLParser.GT) | (1 << DCLParser.GT_EQ))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self.baseExprRule(0)
                pass

            elif la_ == 2:
                localctx = DCLParser.LowCompExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.baseExprRule(0)
                self.state = 69
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DCLParser.EQ1) | (1 << DCLParser.EQ2) | (1 << DCLParser.NOT_EQ1) | (1 << DCLParser.NOT_EQ2))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 70
                self.baseExprRule(0)
                pass

            elif la_ == 3:
                localctx = DCLParser.NotExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(DCLParser.K_NOT)
                self.state = 73
                localctx.value = self.baseExprRule(0)
                pass

            elif la_ == 4:
                localctx = DCLParser.StringCompExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.baseExprRule(0)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DCLParser.K_NOT:
                    self.state = 75
                    localctx.negate = self.match(DCLParser.K_NOT)


                self.state = 78
                self.match(DCLParser.K_LIKE)
                self.state = 79
                self.baseExprRule(0)
                pass

            elif la_ == 5:
                localctx = DCLParser.BetweenExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 81
                self.baseExprRule(0)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DCLParser.K_NOT:
                    self.state = 82
                    localctx.negate = self.match(DCLParser.K_NOT)


                self.state = 85
                self.match(DCLParser.K_BETWEEN)
                self.state = 86
                self.baseExprRule(0)
                self.state = 87
                self.match(DCLParser.K_AND)
                self.state = 88
                self.baseExprRule(0)
                pass
